appId: com.anonymous.orn-ui-example
tags:
  - behavior
---
- runFlow:
    file: ../../subflows/open-demo.yaml
    env:
      MAESTRO_APP_ID: com.anonymous.orn-ui-example
      BASE_PATH: "molecules"
      SLUG: "segmented-control"
      TITLE: "SegmentedControl"

- assertVisible: "Showing the last week."
- tapOn: "Day"
- assertVisible: "Showing the last day."
- tapOn: "Month"
- assertVisible: "Showing the last month."
